# devops-engineer-from-scratch-project-49

./: .gitignore  Makefile  README.md  calc-demo.cast  even-demo.cast  prime-demo.cast  progression-demo.cast  pyproject.toml
brain_games/: __init__.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: __init__.py  brain_games.py  calc_launch.py  cli.py  engine.py  even_launch.py  gcd_launch.py  prime_launch.py  progression_launch.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
