[project]
name = "hexlet-code"
version = "0.1.0"
description = "MIN(D)TRICK-games"
authors = [{name = "Mrac"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.games.brain_even:run"
brain-calc = "brain_games.scripts.games.brain_calc:run"
brain-gcd = "brain_games.scripts.games.brain_gcd:run"
brain-progression = "brain_games.scripts.games.brain_progression:run"
brain-prime = "brain_games.scripts.games.brain_prime:run"